--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   jupyter-notebook:
-    image:  siddart/mds:latest
+    build: 
+      context: .  # Use the current directory as the build context
+      dockerfile: Dockerfile  # Specify your Dockerfile
+    image: testing_cmds  # Optional: give your image a name
     ports:
       - "8888:8888"
     volumes:
